--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -37,7 +37,7 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.PYPI_DNO_PASSWORD }}
         run: |
           make build-pip
-          ll tfacon_pip/tfacon_binary/
           cd pip_package/
+          ls tfacon_pip/tfacon_binary/
           python3 setup.py sdist bdist_wheel
           python3 -m twine upload dist/*.gz --verbose
