Fix tfacon release12

--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'pip_package/tfacon_pip/__init__.py'
       - 'pip_package/setup.py'
+      - '.github/workflows/publish_pypi.yml'
 
 jobs:
   deploy_pypi:
