--- a/test_data/workspace_data/tfacon_real_data.yml
+++ b/test_data/workspace_data/tfacon_real_data.yml
@@ -1,6 +1,6 @@
-launch_id: "your launch_id goes here"
-project_name: "your project name goes here"
+launch_id: "<your launch_id>"
+project_name: "<your project name>"
 auth_token: "xxxxx-xxxx-xxxxx-xxxx-xxxxx"
-platform_url: "https://reportportal.com"
+platform_url: "https://reportportal.<your_domain>.com"
 tfa_url: "your tfa classifier url"
 connector_type: "RPCon"
