--- a/examples/tfacon.yml
+++ b/examples/tfacon.yml
@@ -1,5 +1,6 @@
 launch_id: "your launch_id goes here"
 launch_name: "This is optional if you have launch id"
+launch_uuid: "This is optional if you have launch id"
 project_name: "your project name goes here"
 auth_token: "xxxxx-xxxx-xxxxx-xxxx-xxxxx"
 platform_url: "https://reportportal.com"
