Updated copyright and readme

--- a/examples/tfacon.cfg
+++ b/examples/tfacon.cfg
@@ -1,3 +1,5 @@
 [config]
+# This will run prediction extraction concurrently
 concurrency=True
+# tfacon will add attributes of "AI Prediction" and "Accuracy" under the item details section
 add_attributes=False
