modified the doc and bump the release version

--- a/examples/tfacon.cfg
+++ b/examples/tfacon.cfg
@@ -3,3 +3,5 @@
 concurrency=True
 # tfacon will add attributes of "AI Prediction" and "Accuracy" under the item details section
 add_attributes=False
+# you can define the retry number here
+retry_times = 20
