--- a/examples/tfacon.cfg
+++ b/examples/tfacon.cfg
@@ -5,3 +5,7 @@ concurrency=True
 add_attributes=False
 # you can define the retry number here
 retry_times = 20
+# you can define if you want to enable the auto_finalize_defect_type feature
+auto_finalize_defect_type = True
+# You need to specify this parameter to have TFA automatically tag the test item to the defect types without Pridicted
+auto_finalization_thredshold = 0.999
